# anastasis

./: .gitignore  Pipfile  beethoven.py  composer.py  generator.py  grid.py  griddy.py  imaging.py  linesegment.py  rect.py  rectangle.py
cpp/: CMakeLists.txt  anastasis_cpp.cbp  cmake_install.cmake  downsample.cpp  main.cpp  metis.cpp  subpixel.cpp
cpp/grid/: Array2D.cpp  Array2D.h  abstractgrid.cpp  abstractgrid.h  box.cpp  box.h  canonicalgrid.cpp  canonicalgrid.h  detectorimage.cpp  detectorimage.h  grid.cpp  grid.h  image.cpp  image.h  image.tpp  modelimage.cpp  modelimage.h  pixel.cpp  pixel.h  placedgrid.cpp  placedgrid.h  placedgrid.tpp  placedimage.cpp  placedimage.h  spectralgrid.cpp  spectralgrid.h
cpp/grid/pixel/: pixel.cpp  pixel.h  polypixel.cpp  polypixel.h
cpp/grid/transform/: affine.cpp  affine.h
cpp/spatial/: distant.cpp  distant.h  metrics.h  spatial.h
cpp/spatial/structures/: balltree.cpp  balltree.h  kdtree.h  vpitree.h  vpitree.tpp
cpp/types/: point.cpp  point.h  types.h
cpp/utils/: eigen.cpp  eigen.h  functions.cpp  functions.h  resample.cpp  resample.h
py/: beethoven.py  composer.py  generator.py  grid.py  griddy.py  imaging.py  show_npy.py  test_npy.py  visualize.py
py/tests/: test_composer.py
tests/: test_composer.py  test_grid.py
